--- a/assets/stylesheets/intouch.css
+++ b/assets/stylesheets/intouch.css
@@ -12,11 +12,13 @@
     border-collapse: collapse;
     margin-top: 5px;
 }
+
 .intouch-settings table th {
     border: 1px solid #555;
     padding: 0 5px;
 
 }
+
 .intouch-settings table td {
     padding: 7px;
     border: 1px solid #555;
@@ -24,7 +26,7 @@
 }
 
 .intouch-settings .ui-widget-content {
-  background: none;
+    background: none;
 }
 
 .intouch-settings p.description, .tabular.settings p.description {
@@ -35,12 +37,13 @@
 .intouch-settings h4 {
     margin-top: 15px;
 }
+
 .intouch-settings h5 {
     margin: 0;
 }
 
 .intouch-settings .hours_input, .tabular.settings .hours_input {
-  width: 35px;
+    width: 35px;
 }
 
 .half {
@@ -75,42 +78,59 @@ ul.inline-checkboxes li {
 
 /**** Tabs ****/
 
-.intouch-tabs {height: 2.6em; margin-bottom:1.2em; position:relative; overflow:hidden;}
-.intouch-tabs ul {margin:0; position:absolute; bottom:0; padding-left:0.5em; width: 2000px; border-bottom: 1px solid #bbbbbb;}
-.intouch-tabs ul li {
-  float:left;
-  list-style-type:none;
-  white-space:nowrap;
-  margin-right:4px;
-  background:#fff;
-  position:relative;
-  margin-bottom:-1px;
+.intouch-tabs {
+    height: 2.6em;
+    margin-bottom: 1.2em;
+    position: relative;
+    overflow: hidden;
 }
-.intouch-tabs ul li a{
-  display:block;
-  font-size: 0.9em;
-  text-decoration:none;
-  line-height:1.3em;
-  padding:4px 6px 4px 6px;
-  border: 1px solid #ccc;
-  border-bottom: 1px solid #bbbbbb;
-  background-color: #f6f6f6;
-  color:#999;
-  font-weight:bold;
-  border-top-left-radius:3px;
-  border-top-right-radius:3px;
+
+.intouch-tabs ul {
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    padding-left: 0.5em;
+    width: 2000px;
+    border-bottom: 1px solid #bbbbbb;
+}
+
+.intouch-tabs ul li {
+    float: left;
+    list-style-type: none;
+    white-space: nowrap;
+    margin-right: 4px;
+    background: #fff;
+    position: relative;
+    margin-bottom: -1px;
+}
+
+.intouch-tabs ul li a {
+    display: block;
+    font-size: 0.9em;
+    text-decoration: none;
+    line-height: 1.3em;
+    padding: 4px 6px 4px 6px;
+    border: 1px solid #ccc;
+    border-bottom: 1px solid #bbbbbb;
+    background-color: #f6f6f6;
+    color: #999;
+    font-weight: bold;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 }
 
 .intouch-tabs ul li a:hover {
-  background-color: #ffffdd;
-  text-decoration:none;
+    background-color: #ffffdd;
+    text-decoration: none;
 }
 
 .intouch-tabs ul li a.selected {
-  background-color: #fff;
-  border: 1px solid #bbbbbb;
-  border-bottom: 1px solid #fff;
-  color:#444;
+    background-color: #fff;
+    border: 1px solid #bbbbbb;
+    border-bottom: 1px solid #fff;
+    color: #444;
 }
 
-.intouch-tabs ul li a.selected:hover {background-color: #fff;}
+.intouch-tabs ul li a.selected:hover {
+    background-color: #fff;
+}
