--- a/app/views/projects/settings/intouch/issue_update/_telegram_groups.html.erb
+++ b/app/views/projects/settings/intouch/issue_update/_telegram_groups.html.erb
@@ -11,63 +11,35 @@
 <% priorities = IssuePriority.order(:position) %>
 <% statuses = IssueStatus.order(:position) %>
 
-<% TelegramGroupChat.find_each do |telegram_group| %>
-  <% kind = dom_id(telegram_group) %>
-  <h4><%= telegram_group.title %></h4>
-  <%= check_box_tag "intouch_settings[telegram_settings][groups][#{telegram_group.id}][only_unassigned]", '1',
-                    settings_source.telegram_settings.try(:[], 'groups').try(:[], telegram_group.id.to_s).
-                        try(:[], 'only_unassigned'),
-                    id: "telegram_groups_#{telegram_group.id}_only_unassigned"
-  %>
-  <%= label_tag "telegram_groups_#{telegram_group.id}_only_unassigned",
-                t('intouch.project.settings.issue_update.telegram_groups.only_unassigned') %>
+<div style="padding-top: 10px">
+  Добавить чат:
+  <select style="width: 25%" class="telegram-group-select"></select>
+</div>
 
-  <%= check_box_tag "intouch_settings[telegram_settings][groups][#{telegram_group.id}][anytime]", '1',
-                    settings_source.telegram_settings.try(:[], 'groups').try(:[], telegram_group.id.to_s).
-                        try(:[], 'anytime'),
-                    id: "telegram_groups_#{telegram_group.id}_anytime"
-  %>
-  <%= label_tag "telegram_groups_#{telegram_group.id}_anytime",
-                t('intouch.project.settings.issue_update.telegram_groups.anytime') %>
-  <table>
-    <thead>
-    <tr>
-      <th><%= t('field_status') %> \ <%= t('field_priority') %></th>
-      <% priorities.each do |priority| %>
-        <th>
-          <%= check_box_tag "#{kind}_priority_#{priority.id}", '1', false, class: 'prioritySelectAll',
-                            data:                                                 { kind: kind, priority_id: priority.id }
-          %>
-          <%= label_tag "#{kind}_priority_#{priority.id}", priority.name %>
-        </th>
-      <% end %>
-    </tr>
-    </thead>
-    <tbody>
-    <% statuses.each do |status| %>
-      <tr>
-        <th>
-          <%= check_box_tag "#{kind}_status_#{status.id}", '1', false, class: 'statusSelectAll',
-                            data: {kind: kind, status_id: status.id}
-          %>
-          <%= label_tag "#{kind}_status_#{status.id}", status.name %>
-        </th>
-        <% priorities.each do |priority| %>
+<script>
+  $('.telegram-group-select').select2({
+    ajax: {
+      url: '/telegram_groups',
+      dataType: 'json',
+      delay: 500
+    }
+  });
 
-          <td>
-            <%= check_box_tag "intouch_settings[telegram_settings][groups][#{telegram_group.id}][#{status.id}][]", priority.id,
-                              settings_source.telegram_settings.try(:[], 'groups').try(:[], telegram_group.id.to_s).
-                                  try(:[], status.id.to_s).try(:include?, priority.id.to_s),
-                              class: 'intouchPriorityStatusCheckbox',
-                              data:  {kind: kind, priority_id: priority.id, status_id: status.id}
-            %>
-          </td>
+  $('.telegram-group-select').on('select2:select', function (e) {
+    var sourceId = '<%= settings_source.id %>'
+    var sourceType = '<%= settings_source.class %>'
 
-        <% end %>
-      </tr>
+    var data = e.params.data
+
+    $.get('/telegram_groups/' + data.id + '?source_id=' + sourceId + '&source_type=' + sourceType)
+  });
+</script>
+
+<div id="telegram-groups-list">
+  <% TelegramGroupChat.where(id: settings_source.telegram_settings&.[]('groups')&.keys.to_a).find_each do |telegram_group| %>
+    <%= render partial: 'projects/settings/intouch/issue_update/telegram_group',
+               locals: { telegram_group: telegram_group, priorities: priorities, statuses: statuses, settings_source: settings_source } %>
+  <% end %>
+</div>
 
 
-    <% end %>
-    </tbody>
-  </table>
-<% end %>
