--- a/app/views/settings_templates/new.html.erb
+++ b/app/views/settings_templates/new.html.erb
@@ -19,4 +19,7 @@
 <% content_for :header_tags do %>
   <%= stylesheet_link_tag 'intouch.css', plugin: 'redmine_intouch' %>
   <%= javascript_include_tag 'intouch.js', plugin: 'redmine_intouch' %>
+
+  <%= stylesheet_link_tag 'select2.css', plugin: 'redmine_intouch' %>
+  <%= javascript_include_tag 'select2.js', plugin: 'redmine_intouch' %>
 <% end %>
