1131704 add hint to float interval settings

--- a/app/views/projects/settings/intouch/reminder/_intervals.html.erb
+++ b/app/views/projects/settings/intouch/reminder/_intervals.html.erb
@@ -9,6 +9,35 @@
     <%= raw t('intouch.project.settings.reminder.intervals.example_2') %><br>
     <%= raw t('intouch.project.settings.reminder.intervals.notice') %>
   </p>
+
+  <div class="intouch-settings description">
+    <strong><%= t('intouch.project.settings.reminder.intervals.hint_for_minutes_label') %>:</strong>
+    <%= t('intouch.project.settings.reminder.intervals.hint_for_minutes') %>
+
+    <table>
+      <thead>
+      <tr>
+        <th><%= raw t('intouch.project.settings.reminder.intervals.minutes') %></th>
+        <th>10</th>
+        <th>20</th>
+        <th>30</th>
+        <th>40</th>
+        <th>50</th>
+      </tr>
+      <tr>
+        <th><%= raw t('intouch.project.settings.reminder.intervals.float_values') %></th>
+        <th>0.16</th>
+        <th>0.33</th>
+        <th>0.5</th>
+        <th>0.66</th>
+        <th>0.83</th>
+      </tr>
+      </thead>
+    </table>
+  </div>
+
+  <hr/>
+
   <table>
     <thead>
     <tr>
