(#1144985) SLA alerts were added

--- a/app/views/projects/settings/intouch/common/_settings.html.erb
+++ b/app/views/projects/settings/intouch/common/_settings.html.erb
@@ -7,7 +7,7 @@
     }
   end
 
-  reminder_tabs = %w(intervals working feedback unassigned overdue).map do |tab|
+  reminder_tabs = %w(intervals working feedback unassigned overdue sla_alarms).map do |tab|
     {
         name: tab,
         partial: "projects/settings/intouch/reminder/#{tab}",
